# peri

./: .gitignore  CLAUDE.md  COMPATIBLE.md  Cargo.toml  DEVLOG.md  ISSUES.md  README.md  README_EN.md  TUI-STYLE.md  demo.md  dev-acp.sh  dev.sh  progress.md  prompts.md
acpx-g/: Cargo.toml  prod.sh  progress.md
acpx-g/examples/: copy-workspace.yaml  error-handling.yaml  simple-ci.yaml  structured-output-demo.yaml
acpx-g/examples/schemas/: pr-report.json
acpx-g/src/: lib.rs  schema.rs
acpx-g/src/api/: workflows.rs
acpx-g/src/core/: context.rs  dag.rs  engine.rs  error.rs  executor.rs  mod.rs  template.rs
acpx-g/src/runner/: executor.rs  loader.rs  mod.rs
acpx-g/static/: api-docs.js  app.js  editor.js  index.html  run-detail.css  run-detail.js  runs.css  runs.js
peri-acp/: Cargo.toml
peri-acp/src/: lib.rs
peri-acp/src/agent/: builder.rs  mod.rs
peri-acp/src/broker/: mod.rs  transport_broker.rs
peri-acp/src/dispatch/: commands.rs  config_update.rs  mod.rs  session_load.rs
peri-acp/src/event/: mapper.rs  mapper_test.rs  mod.rs
peri-acp/src/hooks/: mod.rs
peri-acp/src/langfuse/: config.rs  mod.rs
peri-acp/src/lsp/: mod.rs
peri-acp/src/prompt/: mod.rs
peri-acp/src/provider/: config.rs  config_test.rs  mod.rs
peri-acp/src/session/: executor.rs  frozen.rs  mod.rs  state_builders.rs
peri-acp/src/transport/: mod.rs  mpsc.rs  stdio.rs  types.rs
peri-acp/tests/: integration_test.rs
peri-agent/: Cargo.toml  README.md
peri-agent/examples/: basic_agent.rs  custom_middleware.rs  tool_integration.rs
peri-agent/src/: error.rs  error_test.rs  lib.rs
peri-agent/src/agent/: events.rs  events_test.rs  mod.rs  react.rs  state.rs  state_test.rs  token.rs
peri-agent/src/ask_user/: mod.rs
peri-agent/src/hitl/: mod.rs
peri-agent/src/interaction/: mod.rs
peri-agent/src/llm/: adapter.rs  adapter_test.rs  anthropic_test.rs  cache_diagnostics.rs  cache_diagnostics_test.rs  mod.rs  openai_test.rs  react_adapter.rs  react_adapter_test.rs  repetition.rs  repetition_test.rs  retry.rs  retry_test.rs  sse_test.rs  types_test.rs
peri-agent/src/messages/: content.rs  content_test.rs  message.rs  message_test.rs  mod.rs
peri-agent/src/middleware/: base.rs  chain.rs  chain_test.rs  mod.rs  trait.rs
peri-agent/src/telemetry/: mod.rs  subscriber.rs
peri-agent/src/thread/: filesystem.rs  filesystem_test.rs  mod.rs  redis_store.rs  redis_store_test.rs  sqlite_store.rs  sqlite_store_test.rs  store.rs  types.rs
peri-agent/src/tools/: mod.rs
peri-agent/tests/: agent_tests.rs  integration_tests.rs  middleware_tests.rs
peri-lsp/: Cargo.toml
peri-lsp/src/: client.rs  config.rs  config_test.rs  diagnostics.rs  diagnostics_test.rs  lib.rs  pool.rs  pool_test.rs
peri-lsp/src/jsonrpc/: codec.rs  codec_test.rs  message.rs  message_test.rs  mod.rs
peri-lsp/src/protocol/: mod.rs  notifications.rs  requests.rs  requests_test.rs
peri-tui/: CLAUDE.md  Cargo.toml  build.rs
peri-tui/locales/en/: main.ftl
peri-tui/locales/zh-CN/: main.ftl
peri-tui/prompts/sections/: 01_intro.md  02_system.md  03_doing_tasks.md  05_using_tools.md  06_tone_style.md  07_env.md  10_hitl.md  11_subagent.md  12_cron.md  13_skills.md  14_system_reminder.md
peri-tui/src/: acp_server.rs  acp_stdio.rs  alloc_config.rs  alloc_config_test.rs  cli_print.rs  conpty.rs  event.rs  jemalloc_config.rs  lib.rs  main.rs  mimalloc_config.rs  prompt.rs  prompt_test.rs
peri-tui/src/acp/: agent_assembler.rs  broker.rs  dispatch.rs  dispatch_test.rs  event_mapper.rs  main_acp.rs  mod.rs  request_handler.rs  session.rs
peri-tui/src/acp_client/: client.rs
peri-tui/src/acp_server/: compact.rs  mod.rs  notify.rs  prompt.rs  prompt_test.rs  requests.rs  requests_test.rs
peri-tui/src/app/: agent.rs  agent_comm.rs  agent_compact.rs  agent_events_bg.rs  agent_events_oauth.rs  agent_events_plugin.rs  agent_ops.rs  agent_ops_interaction.rs  agent_ops_test.rs  agent_panel.rs  agent_render.rs  agent_submit.rs  agent_submit_test.rs  agent_test.rs  ask_user_ops.rs  ask_user_prompt.rs  chat_session.rs  command_palette_panel.rs  command_palette_panel_test.rs  command_system.rs  config_panel.rs  config_panel_test.rs  cron_ops.rs  cron_state.rs  events.rs  global_ui_state.rs  hint_ops.rs  hint_ops_test.rs  history_ops.rs  history_persistence.rs  hitl.rs  hitl_ops.rs  hitl_prompt.rs  hooks_panel.rs  hooks_panel_test.rs  interaction_broker.rs  langfuse_state.rs  login_panel.rs  mcp_panel.rs  memory_panel.rs  (+44 more)
peri-tui/src/clipboard/: copy.rs  image_placeholder.rs  mod.rs  paste.rs  path_normalize.rs  stderr_suppress.rs
peri-tui/src/command/: agent.rs  agents.rs  clear.rs  compact.rs  config.rs  context_cmd.rs  cost.rs  cron.rs  doctor.rs  effort.rs  history.rs  lang.rs  login.rs  loop_cmd.rs  loop_cmd_test.rs  mcp.rs  memory.rs  mod.rs  mod_test.rs  model.rs  plugin.rs  plugin_command.rs  rename.rs  split.rs
peri-tui/src/config/: mod.rs  store.rs  types.rs  types_test.rs
peri-tui/src/event/: keyboard.rs  macros.rs  mod.rs  mouse.rs
peri-tui/src/i18n/: mod.rs  mod_test.rs
peri-tui/src/langfuse/: mod.rs  session.rs  tracer.rs
peri-tui/src/sync/: scanner.rs
peri-tui/src/thread/: browser.rs  mod.rs
peri-tui/src/ui/: headless.rs  headless_test.rs  main_ui.rs  main_ui_test.rs  message_render.rs  message_render_test.rs  message_view.rs  message_view_test.rs  mod.rs  render_thread.rs  render_thread_test.rs  theme.rs  tips.rs  (+2 more)
peri-tui/tests/: double_storage_bytes.rs  headless_app_real_rss.rs  headless_first_round_stages.rs  headless_large_toolresult_e2e.rs  https_first_call_cost.rs  jemalloc_precise_attribution.rs  large_toolresult_path.rs  pipeline_real_rss_growth.rs  reqwest_real_accum.rs
peri-widgets/: Cargo.toml
peri-widgets/src/: bordered_panel.rs  bordered_panel_test.rs  checkbox_group.rs  checkbox_group_test.rs  form.rs  form_test.rs  input_field.rs  input_field_test.rs  lib.rs  list_overlay_test.rs  list_test.rs  radio_group.rs  radio_group_test.rs  scrollable.rs  scrollable_test.rs  tab_bar.rs  tab_bar_test.rs
peri-widgets/tests/: markdown_cache_real_cost.rs  syntect_first_load_cost.rs
(+1081 files in other folders)
