[package]
name = "acpx-g"
version = "0.1.0"
edition = "2021"
description = "DAG workflow engine — YAML-defined workflows, web API, SQLite persistence"

[features]
default = ["runtime"]
# Zero-dependency DAG engine core (no async, no DB, no HTTP)
core = ["rayon"]
# YAML parsing for workflow schemas
yaml = ["core", "serde_yaml", "serde", "anyhow"]
# Full runtime: async executor, SQLite, HTTP API, file watcher
runtime = [
    "yaml",
    "anyhow",
    "axum",
    "chrono",
    "reqwest",
    "serde",
    "serde_json",
    "sqlx",
    "tokio",
    "tokio-util",
    "tower",
    "tower-http",
    "include_dir",
    "mime_guess",
    "tracing",
    "tracing-subscriber",
    "uuid",
]

[lib]
name = "acpx_g"
path = "src/lib.rs"

[[bin]]
name = "acpx-g"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { version = "0.8", features = ["macros"], optional = true }
chrono = { workspace = true, optional = true }
include_dir = { version = "0.7", optional = true }
mime_guess = { version = "2", optional = true }
rayon = { version = "1", optional = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
], optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
uuid = { workspace = true, optional = true }
