[package]
name = "peri-agent"
version = "0.1.0"
edition = "2021"
description = "Rust Agent framework with middleware system, aligned with @langgraph-js/standard-agent"
license = "MIT"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs-next.workspace = true
reqwest = { workspace = true, features = ["stream", "blocking"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true
sqlx = { workspace = true }
parking_lot.workspace = true
rand = "0.10"

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
