[package]
name = "peri-tui"
version = "0.1.0"
edition = "2021"
description = "TUI interface for Rust Agent - interactive terminal playground"

[lib]
name = "peri_tui"
path = "src/lib.rs"

[[bin]]
name = "peri"
path = "src/main.rs"

[features]
headless = []

[dev-dependencies]

[dependencies]
serde.workspace = true
peri-agent = { path = "../peri-agent" }
peri-middlewares = { path = "../peri-middlewares" }
peri-lsp = { path = "../peri-lsp" }
ratatui = { version = ">=0.30", features = ["unstable-rendered-line-info"] }
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v7"] }
serde_json.workspace = true
async-trait.workspace = true
dotenvy = "0.15"
tracing.workspace = true
dirs-next.workspace = true
tui-textarea-2 = "0.11"
parking_lot.workspace = true
arboard = "3"
png = "0.18"
base64 = { version = "0.22", features = ["alloc"] }
langfuse-client = { path = "../langfuse-client" }
peri-widgets = { path = "../peri-widgets", features = ["markdown-highlight"] }
unicode-width = "0.2"
unicode-segmentation = "1"
reqwest.workspace = true
clap = { version = "4", features = ["derive"] }
agent-client-protocol = { version = "0.11", features = ["unstable"] }
agent-client-protocol-tokio = { version = "0.11" }
dashmap = "6"
tokio-util.workspace = true
sysinfo.workspace = true
fluent = "0.17"
fluent-bundle = "0.16"
unic-langid = { version = "0.9", features = ["macros"] }
